make some functionality update

--- a/src/app/common/styles/elements.css
+++ b/src/app/common/styles/elements.css
@@ -13,6 +13,10 @@
     flex-direction: column;
 }
 
+.checked {
+    border: 2px solid black !important;
+}
+
 .diagram_element {
     display:flex;
     flex-direction: column;
