made diagram loader and added more functionality

--- a/src/app/common/styles/elements.css
+++ b/src/app/common/styles/elements.css
@@ -44,6 +44,7 @@
     width: 100px;
     height: 100px;
     background-color: white;
+    font-size: small;
 }
 .diagram_decision{
     width: 160px;
