made all functionality

--- a/src/app/common/styles/toolbox.css
+++ b/src/app/common/styles/toolbox.css
@@ -36,3 +36,17 @@
 .subworkflow{
     background-color: burlywood !important;
 }
+
+.select_toolbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100px;
+}
+
+.select_area_toolbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100px;
+}
