--- a/src/app/common/styles/main.css
+++ b/src/app/common/styles/main.css
@@ -22,10 +22,10 @@
 .properties {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    width: 200px;
-    padding: 10px;
+    width: 180px;
+    padding: 15px;
 }
 
 .toolbox {
@@ -33,8 +33,8 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 130px;
-    padding: 10px;
+    width: 145px;
+    padding: 15px;
 }
 
 .diagram {
